--- a/server/package.json
+++ b/server/package.json
@@ -4,16 +4,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "tsc --b && node /dist "
+    "dev": "tsc --b && node dist "
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.1",
+    "@types/mongoose": "^5.11.96",
     "@types/nodemon": "^1.19.6",
+    "bcrypt": "^5.1.1",
     "express": "^5.1.0",
+    "mongoose": "^8.14.0",
     "nodemon": "^3.1.10"
   }
 }
