--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@types/nodemon": "^1.19.6",
     "bcrypt": "^5.1.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.0",
     "nodemon": "^3.1.10"
   }
